# llm-universal-proxy

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  HANDOFF.md  Makefile  README.md  README_CN.md  agents.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: CONSTITUTION.md  DESIGN.md  PRD.md  PROJECT.md  README.md  admin-dynamic-config.md  clients.md  configuration.md  container.md  ga-readiness-review.md  max-compat-design.md  max-compat-development-plan.md  protocol-compatibility-matrix.md
docs/engineering/: README.md  max-compat-development-plan.md  pre-ga-conversation-state-bridge-plan.md  pre-ga-remove-native-gemini-format-plan.md  pre-ga-strict-passthrough-prompt-cache-support-plan.md
docs/protocol-baselines/: README.md  anthropic-messages.md  compatibility-audit-2026-04-07.md  google-gemini.md  openai-chat-completions.md  openai-responses.md  overview.md
docs/release-artifacts/: container-image.json
examples/: container-config.yaml  docker-compose.yaml  quickstart-openai-minimax.yaml  quickstart-provider-neutral.yaml  upstream-proxy.yaml
scripts/: check-governance.sh  interactive_cli.py  real_cli_matrix.py  real_endpoint_matrix.py  repo_metadata.py  run_claude_proxy.sh  run_codex_proxy.sh  run_gemini_proxy.sh  supply_chain_audit.sh  test-and-report.sh  test_binary_smoke.sh  test_cli_clients.sh  test_compatibility.sh  test_container_smoke.sh
src/: config.rs  dashboard.rs  dashboard_logs.rs  debug_trace.rs  detect.rs  discovery.rs  downstream.rs  formats.rs  hooks.rs  internal_artifacts.rs  lib.rs  main.rs  server.rs  streaming.rs  telemetry.rs  translate.rs  upstream.rs
src/config/: model_surface.rs
src/server/: admin.rs  (+15 more)
tests/: detect_test.rs  integration_test.rs  multimodal_anthropic_contract_test.rs  multimodal_gemini_boundary_test.rs  multimodal_integration_test.rs  reasoning_test.rs  runtime_chain_test.rs  test_cli_matrix_contracts.py  test_codex_json_event_contract.py  test_codex_prework_signal_contract.py  test_default_matrix_config_source_contract.py  test_default_matrix_surface_contract.py  test_docs_homepage_contract.py  test_ga_docs_contract.py  test_governance.py  test_interactive_cli.py  test_live_surface_fail_fast_contract.py  test_project_docs_contract.py  test_protocol_docs_contract.py  test_real_cli_matrix.py  test_real_client_edit_contract.py  test_real_endpoint_matrix.py  test_release_gates.py  upstream_proxy_matrix_test.rs  upstream_proxy_test.rs
(+119 files in other folders)
