[package]
name = "llm-universal-proxy"
version = "0.2.12"
edition = "2021"
description = "Universal LLM endpoint proxy: single URL, 4 formats (Google, Anthropic, OpenAI completion, OpenAI responses), streaming, format conversion with passthrough when same."
license = "MIT"
repository = "https://github.com/lzjever/llm-universal-proxy"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls", "gzip", "brotli", "deflate", "zstd", "socks"], default-features = false }
bytes = "1"
futures-util = "0.3"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
url = "2"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
axum-test = "14"
tokio-test = "0.4"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
